[workspace]
resolver = "3"
members = ["hello_lib"]

[workspace.package]
authors = ["Anthony"]

[package]
name = "hellow_world"
authors.workspace = true
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
hello_lib = { path = "./hello_lib" }
